
Build
-----

- Issue #6603: Change READ_TIMESTAMP macro in ceval.c so that it
  compiles correctly under gcc on x86-64.  This fixes a reported
  problem with the --with-tsc build on x86-64.

- Ensure that it possible to build extensions for the default
  binary distribution on OSX 10.6 even when the user does not
  have the 10.4u SDK installed.

Tests
-----

- Issue #7431: use TESTFN in test_linecache instead of trying to create a 
  file in the Lib/test directory, which might be read-only for the
  user running the tests.

- Issue #7324: add a sanity check to regrtest argument parsing to
  catch the case of an option with no handler.

- Issue #7295: Do not use a hardcoded file name in test_tarfile.

- Issue #7270: Add some dedicated unit tests for multi-thread synchronization
  primitives such as Lock, RLock, Condition, Event and Semaphore.

- Issue #7055: test___all__ now greedily detects all modules which have an
  __all__ attribute, rather than using a hardcoded and incomplete list.


What's New in Python 2.6.4 final?
=================================

*Release date: 25-Oct-2009*

Core and Builtins
-----------------

Library
-------


What's New in Python 2.6.4rc2?
==============================

*Release date: 18-Oct-2009*

Core and Builtins
-----------------

Library
-------

- Issue #7115: Fixed the extension module builds that is failing when using
  paths in the extension name instead of dotted names.

- Issue #7120: logging: Removed import of multiprocessing which is causing
  crash in GAE.

- Issue #7149: fix exception in urllib when detecting proxy settings on OSX.


What's New in Python 2.6.4rc1?
==============================

*Release date: 07-Oct-2009*

Core and Builtins
-----------------

- Issue #7019: Raise ValueError when unmarshalling bad long data, instead
  of producing internally inconsistent Python longs.

Library
-------

- Issue #7068: Fixed the partial renaming that occured in r72594.
